// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process Details Page component tests snapshot testing for error occurance 1`] = `
<ProcessDetailsPage
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
  location={
    Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": undefined,
    }
  }
  match={
    Object {
      "isExact": false,
      "params": Object {
        "instanceID": "8035b580-6ae4-4aa8-9ec0-e18e19809e0bc",
      },
      "path": "",
      "url": "",
    }
  }
>
  <div
    data-ouia-component-type="ProcessDetailsPage"
    data-ouia-safe={true}
  >
    <ServerErrors
      error={
        [Error: Network error: No more mocked responses for the query: query getProcessInstanceById($id: String) {
  ProcessInstances(where: {id: {equal: $id}}) {
    id
    processId
    processName
    businessKey
    parentProcessInstanceId
    parentProcessInstance {
      id
      processName
      businessKey
    }
    roles
    variables
    state
    start
    lastUpdate
    end
    addons
    endpoint
    addons
    serviceUrl
    error {
      nodeDefinitionId
      message
    }
    childProcessInstances {
      id
      processName
      businessKey
    }
    nodes {
      id
      nodeId
      name
      enter
      exit
      type
      definitionId
    }
  }
}
, variables: {"id":"8035b580-6ae4-4aa8-9ec0-e18e19809e0bc"}]
      }
      variant="large"
    >
      <MockedComponent />
    </ServerErrors>
  </div>
</ProcessDetailsPage>
`;

exports[`Process Details Page component tests snapshot testing in Active state 1`] = `
<ProcessDetailsPage
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
  location={
    Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": Object {
        "filters": Object {
          "businessKey": Array [
            "tra",
          ],
          "status": Array [
            "ACTIVE",
          ],
        },
      },
    }
  }
  match={
    Object {
      "isExact": false,
      "params": Object {
        "instanceID": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
      },
      "path": "",
      "url": "",
    }
  }
>
  <div
    data-ouia-component-type="ProcessDetailsPage"
    data-ouia-safe={true}
  >
    <PageSection
      variant="light"
    >
      <section
        className="pf-c-page__main-section pf-m-light"
      >
        <MockedProcessListModal
          handleModalToggle={[Function]}
          isModalOpen={false}
          modalContent=""
          processName="travels"
        />
        <PageTitle
          title="Process Details"
        >
          <Title
            data-ouia-component-type="page-title"
            data-ouia-safe={true}
            headingLevel="h1"
            size="4xl"
          >
            <h1
              className="pf-c-title pf-m-4xl"
              data-ouia-component-type="page-title"
              data-ouia-safe={true}
            >
              Process Details
            </h1>
          </Title>
        </PageTitle>
        <Grid
          hasGutter={true}
          lg={6}
          md={1}
          span={12}
          xl={4}
        >
          <div
            className="pf-l-grid pf-m-all-12-col pf-m-all-1-col-on-md pf-m-all-6-col-on-lg pf-m-all-4-col-on-xl pf-m-gutter"
          >
            <GridItem
              span={12}
            >
              <div
                className="pf-l-grid__item pf-m-12-col"
              >
                <Breadcrumb>
                  <nav
                    aria-label="Breadcrumb"
                    className="pf-c-breadcrumb"
                    data-ouia-component-id={1}
                    data-ouia-component-type="PF4/Breadcrumb"
                    data-ouia-safe={true}
                  >
                    <ol
                      className="pf-c-breadcrumb__list"
                    >
                      <BreadcrumbItem
                        key=".0"
                        showDivider={false}
                      >
                        <li
                          className="pf-c-breadcrumb__item"
                        >
                          <Link
                            to="/"
                          >
                            <LinkAnchor
                              href="/"
                              navigate={[Function]}
                            >
                              <a
                                href="/"
                                onClick={[Function]}
                              >
                                Home
                              </a>
                            </LinkAnchor>
                          </Link>
                        </li>
                      </BreadcrumbItem>
                      <BreadcrumbItem
                        key=".1:$0"
                        showDivider={true}
                      >
                        <li
                          className="pf-c-breadcrumb__item"
                        >
                          <span
                            className="pf-c-breadcrumb__item-divider"
                          >
                            <AngleRightIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  Object {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 256 512"
                                width="1em"
                              >
                                <path
                                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                                  transform=""
                                />
                              </svg>
                            </AngleRightIcon>
                          </span>
                          <Link
                            to={
                              Object {
                                "pathname": "/ProcessInstances",
                                "state": Object {
                                  "filters": Object {
                                    "businessKey": Array [
                                      "tra",
                                    ],
                                    "status": Array [
                                      "ACTIVE",
                                    ],
                                  },
                                },
                              }
                            }
                          >
                            <LinkAnchor
                              href="/ProcessInstances"
                              navigate={[Function]}
                            >
                              <a
                                href="/ProcessInstances"
                                onClick={[Function]}
                              >
                                Process Instances
                              </a>
                            </LinkAnchor>
                          </Link>
                        </li>
                      </BreadcrumbItem>
                      <BreadcrumbItem
                        key=".1:$1"
                        showDivider={true}
                      >
                        <li
                          className="pf-c-breadcrumb__item"
                        >
                          <span
                            className="pf-c-breadcrumb__item-divider"
                          >
                            <AngleRightIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  Object {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 256 512"
                                width="1em"
                              >
                                <path
                                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                                  transform=""
                                />
                              </svg>
                            </AngleRightIcon>
                          </span>
                          <Link
                            to={
                              Object {
                                "pathname": "/ProcessInstances/8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
                                "state": Object {
                                  "filters": Object {
                                    "businessKey": Array [
                                      "tra",
                                    ],
                                    "status": Array [
                                      "ACTIVE",
                                    ],
                                  },
                                },
                              }
                            }
                          >
                            <LinkAnchor
                              href="/ProcessInstances/8035b580-6ae4-4aa8-9ec0-e18e19809e0b"
                              navigate={[Function]}
                            >
                              <a
                                href="/ProcessInstances/8035b580-6ae4-4aa8-9ec0-e18e19809e0b"
                                onClick={[Function]}
                              >
                                8035b580-6ae4-4aa8-9ec0-e18e19809e0b
                              </a>
                            </LinkAnchor>
                          </Link>
                        </li>
                      </BreadcrumbItem>
                      <BreadcrumbItem
                        isActive={true}
                        key=".2"
                        showDivider={true}
                      >
                        <li
                          className="pf-c-breadcrumb__item"
                        >
                          <span
                            className="pf-c-breadcrumb__item-divider"
                          >
                            <AngleRightIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  Object {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 256 512"
                                width="1em"
                              >
                                <path
                                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                                  transform=""
                                />
                              </svg>
                            </AngleRightIcon>
                          </span>
                          travels
                        </li>
                      </BreadcrumbItem>
                    </ol>
                  </nav>
                </Breadcrumb>
              </div>
            </GridItem>
          </div>
        </Grid>
      </section>
    </PageSection>
    <PageSection>
      <section
        className="pf-c-page__main-section"
      >
        <Grid
          hasGutter={true}
          lg={6}
          md={1}
          span={12}
          xl={4}
        >
          <div
            className="pf-l-grid pf-m-all-12-col pf-m-all-1-col-on-md pf-m-all-6-col-on-lg pf-m-all-4-col-on-xl pf-m-gutter"
          >
            <GridItem
              span={12}
            >
              <div
                className="pf-l-grid__item pf-m-12-col"
              >
                <Split
                  className="pf-u-align-items-center"
                  component="div"
                  hasGutter={true}
                >
                  <div
                    className="pf-l-split pf-m-gutter pf-u-align-items-center"
                  >
                    <SplitItem
                      isFilled={true}
                    >
                      <div
                        className="pf-l-split__item pf-m-fill"
                      >
                        <Title
                          className="kogito-management-console--details__title"
                          headingLevel="h2"
                          size="4xl"
                        >
                          <h2
                            className="pf-c-title pf-m-4xl kogito-management-console--details__title"
                          >
                            <ItemDescriptor
                              itemDescription={
                                Object {
                                  "description": null,
                                  "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
                                  "name": "travels",
                                }
                              }
                            >
                              <MockedComponent />
                            </ItemDescriptor>
                          </h2>
                        </Title>
                      </div>
                    </SplitItem>
                    <SplitItem>
                      <div
                        className="pf-l-split__item"
                      >
                        <OverflowMenu
                          breakpoint="lg"
                        >
                          <div
                            className="pf-c-overflow-menu"
                          >
                            <OverflowMenuContent
                              isPersistent={true}
                            >
                              <div
                                className="pf-c-overflow-menu__content"
                              >
                                <OverflowMenuGroup
                                  groupType="button"
                                  isPersistent={true}
                                >
                                  <div
                                    className="pf-c-overflow-menu__group pf-m-button-group"
                                  >
                                    <Button
                                      id="abort-button"
                                      onClick={[Function]}
                                      variant="secondary"
                                    >
                                      <button
                                        aria-disabled={false}
                                        aria-label={null}
                                        className="pf-c-button pf-m-secondary"
                                        data-ouia-component-id={2}
                                        data-ouia-component-type="PF4/Button"
                                        data-ouia-safe={true}
                                        disabled={false}
                                        id="abort-button"
                                        onClick={[Function]}
                                        type="button"
                                      >
                                        Abort
                                      </button>
                                    </Button>
                                  </div>
                                </OverflowMenuGroup>
                              </div>
                            </OverflowMenuContent>
                          </div>
                        </OverflowMenu>
                      </div>
                    </SplitItem>
                  </div>
                </Split>
              </div>
            </GridItem>
            <GridItem>
              <div
                className="pf-l-grid__item"
              >
                <MockedProcessDetails
                  data={
                    Object {
                      "ProcessInstances": Array [
                        Object {
                          "addons": Array [
                            "process-management",
                          ],
                          "businessKey": null,
                          "childProcessInstances": Array [],
                          "end": null,
                          "endpoint": "http://localhost:4000",
                          "error": Object {
                            "message": "Something went wrong",
                            "nodeDefinitionId": "a1e139d5-4e77-48c9-84ae-3459188e90433n",
                          },
                          "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
                          "lastUpdate": "2019-10-22T03:40:44.089Z",
                          "nodes": Array [
                            Object {
                              "definitionId": "StartEvent_1",
                              "enter": "2019-10-22T04:43:01.135Z",
                              "exit": "2019-10-22T04:43:01.135Z",
                              "id": "90e5a337-1c26-4fcc-8ee2-d20e6ba2a1a3",
                              "name": "StartProcess",
                              "nodeId": "9",
                              "type": "StartNode",
                            },
                          ],
                          "parentProcessInstance": null,
                          "parentProcessInstanceId": null,
                          "processId": "Travels",
                          "processName": "travels",
                          "roles": Array [],
                          "serviceUrl": "http://localhost:4000",
                          "start": "2019-10-22T03:40:44.089Z",
                          "state": "ACTIVE",
                          "variables": "{\\"flight\\":{\\"arrival\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"departure\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"flightNumber\\":\\"MX555\\"},\\"hotel\\":{\\"address\\":{\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"street\\":\\"street\\",\\"zipCode\\":\\"12345\\"},\\"bookingNumber\\":\\"XX-012345\\",\\"name\\":\\"Perfect hotel\\",\\"phone\\":\\"09876543\\"},\\"trip\\":{\\"begin\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"end\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"visaRequired\\":false},\\"traveller\\":{\\"address\\":{\\"city\\":\\"Karkow\\",\\"country\\":\\"Poland\\",\\"street\\":\\"palna\\",\\"zipCode\\":\\"200300\\"},\\"email\\":\\"rob@redhat.com\\",\\"firstName\\":\\"Rob\\",\\"lastName\\":\\"Rob\\",\\"nationality\\":\\"Polish\\"}}",
                        },
                      ],
                    }
                  }
                  from={
                    Object {
                      "prev": "/ProcessInstances/8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
                    }
                  }
                />
              </div>
            </GridItem>
            <GridItem>
              <div
                className="pf-l-grid__item"
              >
                <MockedProcessDetailsProcessVariables
                  data={
                    Object {
                      "ProcessInstances": Array [
                        Object {
                          "addons": Array [
                            "process-management",
                          ],
                          "businessKey": null,
                          "childProcessInstances": Array [],
                          "end": null,
                          "endpoint": "http://localhost:4000",
                          "error": Object {
                            "message": "Something went wrong",
                            "nodeDefinitionId": "a1e139d5-4e77-48c9-84ae-3459188e90433n",
                          },
                          "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
                          "lastUpdate": "2019-10-22T03:40:44.089Z",
                          "nodes": Array [
                            Object {
                              "definitionId": "StartEvent_1",
                              "enter": "2019-10-22T04:43:01.135Z",
                              "exit": "2019-10-22T04:43:01.135Z",
                              "id": "90e5a337-1c26-4fcc-8ee2-d20e6ba2a1a3",
                              "name": "StartProcess",
                              "nodeId": "9",
                              "type": "StartNode",
                            },
                          ],
                          "parentProcessInstance": null,
                          "parentProcessInstanceId": null,
                          "processId": "Travels",
                          "processName": "travels",
                          "roles": Array [],
                          "serviceUrl": "http://localhost:4000",
                          "start": "2019-10-22T03:40:44.089Z",
                          "state": "ACTIVE",
                          "variables": "{\\"flight\\":{\\"arrival\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"departure\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"flightNumber\\":\\"MX555\\"},\\"hotel\\":{\\"address\\":{\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"street\\":\\"street\\",\\"zipCode\\":\\"12345\\"},\\"bookingNumber\\":\\"XX-012345\\",\\"name\\":\\"Perfect hotel\\",\\"phone\\":\\"09876543\\"},\\"trip\\":{\\"begin\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"end\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"visaRequired\\":false},\\"traveller\\":{\\"address\\":{\\"city\\":\\"Karkow\\",\\"country\\":\\"Poland\\",\\"street\\":\\"palna\\",\\"zipCode\\":\\"200300\\"},\\"email\\":\\"rob@redhat.com\\",\\"firstName\\":\\"Rob\\",\\"lastName\\":\\"Rob\\",\\"nationality\\":\\"Polish\\"}}",
                        },
                      ],
                    }
                  }
                />
              </div>
            </GridItem>
            <GridItem>
              <div
                className="pf-l-grid__item"
              >
                <MockedProcessDetailsTimeline
                  data={
                    Object {
                      "addons": Array [
                        "process-management",
                      ],
                      "businessKey": null,
                      "childProcessInstances": Array [],
                      "end": null,
                      "endpoint": "http://localhost:4000",
                      "error": Object {
                        "message": "Something went wrong",
                        "nodeDefinitionId": "a1e139d5-4e77-48c9-84ae-3459188e90433n",
                      },
                      "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
                      "lastUpdate": "2019-10-22T03:40:44.089Z",
                      "nodes": Array [
                        Object {
                          "definitionId": "StartEvent_1",
                          "enter": "2019-10-22T04:43:01.135Z",
                          "exit": "2019-10-22T04:43:01.135Z",
                          "id": "90e5a337-1c26-4fcc-8ee2-d20e6ba2a1a3",
                          "name": "StartProcess",
                          "nodeId": "9",
                          "type": "StartNode",
                        },
                      ],
                      "parentProcessInstance": null,
                      "parentProcessInstanceId": null,
                      "processId": "Travels",
                      "processName": "travels",
                      "roles": Array [],
                      "serviceUrl": "http://localhost:4000",
                      "start": "2019-10-22T03:40:44.089Z",
                      "state": "ACTIVE",
                      "variables": "{\\"flight\\":{\\"arrival\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"departure\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"flightNumber\\":\\"MX555\\"},\\"hotel\\":{\\"address\\":{\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"street\\":\\"street\\",\\"zipCode\\":\\"12345\\"},\\"bookingNumber\\":\\"XX-012345\\",\\"name\\":\\"Perfect hotel\\",\\"phone\\":\\"09876543\\"},\\"trip\\":{\\"begin\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"end\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"visaRequired\\":false},\\"traveller\\":{\\"address\\":{\\"city\\":\\"Karkow\\",\\"country\\":\\"Poland\\",\\"street\\":\\"palna\\",\\"zipCode\\":\\"200300\\"},\\"email\\":\\"rob@redhat.com\\",\\"firstName\\":\\"Rob\\",\\"lastName\\":\\"Rob\\",\\"nationality\\":\\"Polish\\"}}",
                    }
                  }
                />
              </div>
            </GridItem>
          </div>
        </Grid>
      </section>
    </PageSection>
  </div>
</ProcessDetailsPage>
`;

exports[`Process Details Page component tests snapshot testing in Error state 1`] = `
<ProcessDetailsPage
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
  location={
    Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": Object {
        "filters": Object {
          "businessKey": Array [
            "tra",
          ],
          "status": Array [
            "ACTIVE",
          ],
        },
      },
    }
  }
  match={
    Object {
      "isExact": false,
      "params": Object {
        "instanceID": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
      },
      "path": "",
      "url": "",
    }
  }
>
  <div
    data-ouia-component-type="ProcessDetailsPage"
    data-ouia-safe={true}
  >
    <PageSection
      variant="light"
    >
      <section
        className="pf-c-page__main-section pf-m-light"
      >
        <MockedProcessListModal
          handleModalToggle={[Function]}
          isModalOpen={false}
          modalContent=""
          processName="travels"
        />
        <PageTitle
          title="Process Details"
        >
          <Title
            data-ouia-component-type="page-title"
            data-ouia-safe={true}
            headingLevel="h1"
            size="4xl"
          >
            <h1
              className="pf-c-title pf-m-4xl"
              data-ouia-component-type="page-title"
              data-ouia-safe={true}
            >
              Process Details
            </h1>
          </Title>
        </PageTitle>
        <Grid
          hasGutter={true}
          lg={6}
          md={1}
          span={12}
          xl={4}
        >
          <div
            className="pf-l-grid pf-m-all-12-col pf-m-all-1-col-on-md pf-m-all-6-col-on-lg pf-m-all-4-col-on-xl pf-m-gutter"
          >
            <GridItem
              span={12}
            >
              <div
                className="pf-l-grid__item pf-m-12-col"
              >
                <Breadcrumb>
                  <nav
                    aria-label="Breadcrumb"
                    className="pf-c-breadcrumb"
                    data-ouia-component-id={26}
                    data-ouia-component-type="PF4/Breadcrumb"
                    data-ouia-safe={true}
                  >
                    <ol
                      className="pf-c-breadcrumb__list"
                    >
                      <BreadcrumbItem
                        key=".0"
                        showDivider={false}
                      >
                        <li
                          className="pf-c-breadcrumb__item"
                        >
                          <Link
                            to="/"
                          >
                            <LinkAnchor
                              href="/"
                              navigate={[Function]}
                            >
                              <a
                                href="/"
                                onClick={[Function]}
                              >
                                Home
                              </a>
                            </LinkAnchor>
                          </Link>
                        </li>
                      </BreadcrumbItem>
                      <BreadcrumbItem
                        key=".1:$0"
                        showDivider={true}
                      >
                        <li
                          className="pf-c-breadcrumb__item"
                        >
                          <span
                            className="pf-c-breadcrumb__item-divider"
                          >
                            <AngleRightIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  Object {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 256 512"
                                width="1em"
                              >
                                <path
                                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                                  transform=""
                                />
                              </svg>
                            </AngleRightIcon>
                          </span>
                          <Link
                            to={
                              Object {
                                "pathname": "/ProcessInstances",
                                "state": Object {
                                  "filters": Object {
                                    "businessKey": Array [
                                      "tra",
                                    ],
                                    "status": Array [
                                      "ACTIVE",
                                    ],
                                  },
                                },
                              }
                            }
                          >
                            <LinkAnchor
                              href="/ProcessInstances"
                              navigate={[Function]}
                            >
                              <a
                                href="/ProcessInstances"
                                onClick={[Function]}
                              >
                                Process Instances
                              </a>
                            </LinkAnchor>
                          </Link>
                        </li>
                      </BreadcrumbItem>
                      <BreadcrumbItem
                        key=".1:$1"
                        showDivider={true}
                      >
                        <li
                          className="pf-c-breadcrumb__item"
                        >
                          <span
                            className="pf-c-breadcrumb__item-divider"
                          >
                            <AngleRightIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  Object {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 256 512"
                                width="1em"
                              >
                                <path
                                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                                  transform=""
                                />
                              </svg>
                            </AngleRightIcon>
                          </span>
                          <Link
                            to={
                              Object {
                                "pathname": "/ProcessInstances/8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
                                "state": Object {
                                  "filters": Object {
                                    "businessKey": Array [
                                      "tra",
                                    ],
                                    "status": Array [
                                      "ACTIVE",
                                    ],
                                  },
                                },
                              }
                            }
                          >
                            <LinkAnchor
                              href="/ProcessInstances/8035b580-6ae4-4aa8-9ec0-e18e19809e0b"
                              navigate={[Function]}
                            >
                              <a
                                href="/ProcessInstances/8035b580-6ae4-4aa8-9ec0-e18e19809e0b"
                                onClick={[Function]}
                              >
                                8035b580-6ae4-4aa8-9ec0-e18e19809e0b
                              </a>
                            </LinkAnchor>
                          </Link>
                        </li>
                      </BreadcrumbItem>
                      <BreadcrumbItem
                        isActive={true}
                        key=".2"
                        showDivider={true}
                      >
                        <li
                          className="pf-c-breadcrumb__item"
                        >
                          <span
                            className="pf-c-breadcrumb__item-divider"
                          >
                            <AngleRightIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  Object {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 256 512"
                                width="1em"
                              >
                                <path
                                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                                  transform=""
                                />
                              </svg>
                            </AngleRightIcon>
                          </span>
                          travels
                        </li>
                      </BreadcrumbItem>
                    </ol>
                  </nav>
                </Breadcrumb>
              </div>
            </GridItem>
          </div>
        </Grid>
      </section>
    </PageSection>
    <PageSection>
      <section
        className="pf-c-page__main-section"
      >
        <Grid
          hasGutter={true}
          lg={6}
          md={1}
          span={12}
          xl={4}
        >
          <div
            className="pf-l-grid pf-m-all-12-col pf-m-all-1-col-on-md pf-m-all-6-col-on-lg pf-m-all-4-col-on-xl pf-m-gutter"
          >
            <GridItem
              span={12}
            >
              <div
                className="pf-l-grid__item pf-m-12-col"
              >
                <Split
                  className="pf-u-align-items-center"
                  component="div"
                  hasGutter={true}
                >
                  <div
                    className="pf-l-split pf-m-gutter pf-u-align-items-center"
                  >
                    <SplitItem
                      isFilled={true}
                    >
                      <div
                        className="pf-l-split__item pf-m-fill"
                      >
                        <Title
                          className="kogito-management-console--details__title"
                          headingLevel="h2"
                          size="4xl"
                        >
                          <h2
                            className="pf-c-title pf-m-4xl kogito-management-console--details__title"
                          >
                            <ItemDescriptor
                              itemDescription={
                                Object {
                                  "description": null,
                                  "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
                                  "name": "travels",
                                }
                              }
                            >
                              <MockedComponent />
                            </ItemDescriptor>
                          </h2>
                        </Title>
                      </div>
                    </SplitItem>
                    <SplitItem>
                      <div
                        className="pf-l-split__item"
                      >
                        <OverflowMenu
                          breakpoint="lg"
                        >
                          <div
                            className="pf-c-overflow-menu"
                          >
                            <OverflowMenuContent
                              isPersistent={true}
                            >
                              <div
                                className="pf-c-overflow-menu__content"
                              >
                                <OverflowMenuGroup
                                  groupType="button"
                                  isPersistent={true}
                                >
                                  <div
                                    className="pf-c-overflow-menu__group pf-m-button-group"
                                  >
                                    <Button
                                      isDisabled={true}
                                      variant="secondary"
                                    >
                                      <button
                                        aria-disabled={true}
                                        aria-label={null}
                                        className="pf-c-button pf-m-secondary pf-m-disabled"
                                        data-ouia-component-id={27}
                                        data-ouia-component-type="PF4/Button"
                                        data-ouia-safe={true}
                                        disabled={true}
                                        tabIndex={null}
                                        type="button"
                                      >
                                        Abort
                                      </button>
                                    </Button>
                                  </div>
                                </OverflowMenuGroup>
                              </div>
                            </OverflowMenuContent>
                          </div>
                        </OverflowMenu>
                      </div>
                    </SplitItem>
                  </div>
                </Split>
              </div>
            </GridItem>
            <GridItem>
              <div
                className="pf-l-grid__item"
              >
                <MockedProcessDetails
                  data={
                    Object {
                      "ProcessInstances": Array [
                        Object {
                          "addons": Array [],
                          "businessKey": null,
                          "childProcessInstances": Array [],
                          "end": null,
                          "endpoint": "http://localhost:4000",
                          "error": Object {
                            "message": "Something went wrong",
                            "nodeDefinitionId": "a1e139d5-4e77-48c9-84ae-3459188e90433n",
                          },
                          "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
                          "lastUpdate": "2019-10-22T03:40:44.089Z",
                          "nodes": Array [
                            Object {
                              "definitionId": "StartEvent_1",
                              "enter": "2019-10-22T04:43:01.135Z",
                              "exit": "2019-10-22T04:43:01.135Z",
                              "id": "90e5a337-1c26-4fcc-8ee2-d20e6ba2a1a3",
                              "name": "StartProcess",
                              "nodeId": "9",
                              "type": "StartNode",
                            },
                          ],
                          "parentProcessInstance": null,
                          "parentProcessInstanceId": null,
                          "processId": "Travels",
                          "processName": "travels",
                          "roles": Array [],
                          "serviceUrl": null,
                          "start": "2019-10-22T03:40:44.089Z",
                          "state": "ERROR",
                          "variables": "{\\"flight\\":{\\"arrival\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"departure\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"flightNumber\\":\\"MX555\\"},\\"hotel\\":{\\"address\\":{\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"street\\":\\"street\\",\\"zipCode\\":\\"12345\\"},\\"bookingNumber\\":\\"XX-012345\\",\\"name\\":\\"Perfect hotel\\",\\"phone\\":\\"09876543\\"},\\"trip\\":{\\"begin\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"end\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"visaRequired\\":false},\\"traveller\\":{\\"address\\":{\\"city\\":\\"Karkow\\",\\"country\\":\\"Poland\\",\\"street\\":\\"palna\\",\\"zipCode\\":\\"200300\\"},\\"email\\":\\"rob@redhat.com\\",\\"firstName\\":\\"Rob\\",\\"lastName\\":\\"Rob\\",\\"nationality\\":\\"Polish\\"}}",
                        },
                      ],
                    }
                  }
                  from={
                    Object {
                      "prev": "/ProcessInstances/8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
                    }
                  }
                />
              </div>
            </GridItem>
            <GridItem>
              <div
                className="pf-l-grid__item"
              >
                <MockedProcessDetailsProcessVariables
                  data={
                    Object {
                      "ProcessInstances": Array [
                        Object {
                          "addons": Array [],
                          "businessKey": null,
                          "childProcessInstances": Array [],
                          "end": null,
                          "endpoint": "http://localhost:4000",
                          "error": Object {
                            "message": "Something went wrong",
                            "nodeDefinitionId": "a1e139d5-4e77-48c9-84ae-3459188e90433n",
                          },
                          "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
                          "lastUpdate": "2019-10-22T03:40:44.089Z",
                          "nodes": Array [
                            Object {
                              "definitionId": "StartEvent_1",
                              "enter": "2019-10-22T04:43:01.135Z",
                              "exit": "2019-10-22T04:43:01.135Z",
                              "id": "90e5a337-1c26-4fcc-8ee2-d20e6ba2a1a3",
                              "name": "StartProcess",
                              "nodeId": "9",
                              "type": "StartNode",
                            },
                          ],
                          "parentProcessInstance": null,
                          "parentProcessInstanceId": null,
                          "processId": "Travels",
                          "processName": "travels",
                          "roles": Array [],
                          "serviceUrl": null,
                          "start": "2019-10-22T03:40:44.089Z",
                          "state": "ERROR",
                          "variables": "{\\"flight\\":{\\"arrival\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"departure\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"flightNumber\\":\\"MX555\\"},\\"hotel\\":{\\"address\\":{\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"street\\":\\"street\\",\\"zipCode\\":\\"12345\\"},\\"bookingNumber\\":\\"XX-012345\\",\\"name\\":\\"Perfect hotel\\",\\"phone\\":\\"09876543\\"},\\"trip\\":{\\"begin\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"end\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"visaRequired\\":false},\\"traveller\\":{\\"address\\":{\\"city\\":\\"Karkow\\",\\"country\\":\\"Poland\\",\\"street\\":\\"palna\\",\\"zipCode\\":\\"200300\\"},\\"email\\":\\"rob@redhat.com\\",\\"firstName\\":\\"Rob\\",\\"lastName\\":\\"Rob\\",\\"nationality\\":\\"Polish\\"}}",
                        },
                      ],
                    }
                  }
                />
              </div>
            </GridItem>
            <GridItem>
              <div
                className="pf-l-grid__item"
              >
                <MockedProcessDetailsTimeline
                  data={
                    Object {
                      "addons": Array [],
                      "businessKey": null,
                      "childProcessInstances": Array [],
                      "end": null,
                      "endpoint": "http://localhost:4000",
                      "error": Object {
                        "message": "Something went wrong",
                        "nodeDefinitionId": "a1e139d5-4e77-48c9-84ae-3459188e90433n",
                      },
                      "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
                      "lastUpdate": "2019-10-22T03:40:44.089Z",
                      "nodes": Array [
                        Object {
                          "definitionId": "StartEvent_1",
                          "enter": "2019-10-22T04:43:01.135Z",
                          "exit": "2019-10-22T04:43:01.135Z",
                          "id": "90e5a337-1c26-4fcc-8ee2-d20e6ba2a1a3",
                          "name": "StartProcess",
                          "nodeId": "9",
                          "type": "StartNode",
                        },
                      ],
                      "parentProcessInstance": null,
                      "parentProcessInstanceId": null,
                      "processId": "Travels",
                      "processName": "travels",
                      "roles": Array [],
                      "serviceUrl": null,
                      "start": "2019-10-22T03:40:44.089Z",
                      "state": "ERROR",
                      "variables": "{\\"flight\\":{\\"arrival\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"departure\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"flightNumber\\":\\"MX555\\"},\\"hotel\\":{\\"address\\":{\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"street\\":\\"street\\",\\"zipCode\\":\\"12345\\"},\\"bookingNumber\\":\\"XX-012345\\",\\"name\\":\\"Perfect hotel\\",\\"phone\\":\\"09876543\\"},\\"trip\\":{\\"begin\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"end\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"visaRequired\\":false},\\"traveller\\":{\\"address\\":{\\"city\\":\\"Karkow\\",\\"country\\":\\"Poland\\",\\"street\\":\\"palna\\",\\"zipCode\\":\\"200300\\"},\\"email\\":\\"rob@redhat.com\\",\\"firstName\\":\\"Rob\\",\\"lastName\\":\\"Rob\\",\\"nationality\\":\\"Polish\\"}}",
                    }
                  }
                />
              </div>
            </GridItem>
          </div>
        </Grid>
      </section>
    </PageSection>
  </div>
</ProcessDetailsPage>
`;

exports[`Process Details Page component tests snapshot testing in Suspended state 1`] = `
<ProcessDetailsPage
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
  location={
    Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": Object {
        "filters": Object {
          "businessKey": Array [
            "tra",
          ],
          "status": Array [
            "ACTIVE",
          ],
        },
      },
    }
  }
  match={
    Object {
      "isExact": false,
      "params": Object {
        "instanceID": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
      },
      "path": "",
      "url": "",
    }
  }
>
  <div
    data-ouia-component-type="ProcessDetailsPage"
    data-ouia-safe={true}
  >
    <PageSection
      variant="light"
    >
      <section
        className="pf-c-page__main-section pf-m-light"
      >
        <MockedProcessListModal
          handleModalToggle={[Function]}
          isModalOpen={false}
          modalContent=""
          processName="travels"
        />
        <PageTitle
          title="Process Details"
        >
          <Title
            data-ouia-component-type="page-title"
            data-ouia-safe={true}
            headingLevel="h1"
            size="4xl"
          >
            <h1
              className="pf-c-title pf-m-4xl"
              data-ouia-component-type="page-title"
              data-ouia-safe={true}
            >
              Process Details
            </h1>
          </Title>
        </PageTitle>
        <Grid
          hasGutter={true}
          lg={6}
          md={1}
          span={12}
          xl={4}
        >
          <div
            className="pf-l-grid pf-m-all-12-col pf-m-all-1-col-on-md pf-m-all-6-col-on-lg pf-m-all-4-col-on-xl pf-m-gutter"
          >
            <GridItem
              span={12}
            >
              <div
                className="pf-l-grid__item pf-m-12-col"
              >
                <Breadcrumb>
                  <nav
                    aria-label="Breadcrumb"
                    className="pf-c-breadcrumb"
                    data-ouia-component-id={29}
                    data-ouia-component-type="PF4/Breadcrumb"
                    data-ouia-safe={true}
                  >
                    <ol
                      className="pf-c-breadcrumb__list"
                    >
                      <BreadcrumbItem
                        key=".0"
                        showDivider={false}
                      >
                        <li
                          className="pf-c-breadcrumb__item"
                        >
                          <Link
                            to="/"
                          >
                            <LinkAnchor
                              href="/"
                              navigate={[Function]}
                            >
                              <a
                                href="/"
                                onClick={[Function]}
                              >
                                Home
                              </a>
                            </LinkAnchor>
                          </Link>
                        </li>
                      </BreadcrumbItem>
                      <BreadcrumbItem
                        key=".1:$0"
                        showDivider={true}
                      >
                        <li
                          className="pf-c-breadcrumb__item"
                        >
                          <span
                            className="pf-c-breadcrumb__item-divider"
                          >
                            <AngleRightIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  Object {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 256 512"
                                width="1em"
                              >
                                <path
                                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                                  transform=""
                                />
                              </svg>
                            </AngleRightIcon>
                          </span>
                          <Link
                            to={
                              Object {
                                "pathname": "/ProcessInstances",
                                "state": Object {
                                  "filters": Object {
                                    "businessKey": Array [
                                      "tra",
                                    ],
                                    "status": Array [
                                      "ACTIVE",
                                    ],
                                  },
                                },
                              }
                            }
                          >
                            <LinkAnchor
                              href="/ProcessInstances"
                              navigate={[Function]}
                            >
                              <a
                                href="/ProcessInstances"
                                onClick={[Function]}
                              >
                                Process Instances
                              </a>
                            </LinkAnchor>
                          </Link>
                        </li>
                      </BreadcrumbItem>
                      <BreadcrumbItem
                        key=".1:$1"
                        showDivider={true}
                      >
                        <li
                          className="pf-c-breadcrumb__item"
                        >
                          <span
                            className="pf-c-breadcrumb__item-divider"
                          >
                            <AngleRightIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  Object {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 256 512"
                                width="1em"
                              >
                                <path
                                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                                  transform=""
                                />
                              </svg>
                            </AngleRightIcon>
                          </span>
                          <Link
                            to={
                              Object {
                                "pathname": "/ProcessInstances/8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
                                "state": Object {
                                  "filters": Object {
                                    "businessKey": Array [
                                      "tra",
                                    ],
                                    "status": Array [
                                      "ACTIVE",
                                    ],
                                  },
                                },
                              }
                            }
                          >
                            <LinkAnchor
                              href="/ProcessInstances/8035b580-6ae4-4aa8-9ec0-e18e19809e0b"
                              navigate={[Function]}
                            >
                              <a
                                href="/ProcessInstances/8035b580-6ae4-4aa8-9ec0-e18e19809e0b"
                                onClick={[Function]}
                              >
                                8035b580-6ae4-4aa8-9ec0-e18e19809e0b
                              </a>
                            </LinkAnchor>
                          </Link>
                        </li>
                      </BreadcrumbItem>
                      <BreadcrumbItem
                        isActive={true}
                        key=".2"
                        showDivider={true}
                      >
                        <li
                          className="pf-c-breadcrumb__item"
                        >
                          <span
                            className="pf-c-breadcrumb__item-divider"
                          >
                            <AngleRightIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  Object {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 256 512"
                                width="1em"
                              >
                                <path
                                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                                  transform=""
                                />
                              </svg>
                            </AngleRightIcon>
                          </span>
                          travels
                        </li>
                      </BreadcrumbItem>
                    </ol>
                  </nav>
                </Breadcrumb>
              </div>
            </GridItem>
          </div>
        </Grid>
      </section>
    </PageSection>
    <PageSection>
      <section
        className="pf-c-page__main-section"
      >
        <Grid
          hasGutter={true}
          lg={6}
          md={1}
          span={12}
          xl={4}
        >
          <div
            className="pf-l-grid pf-m-all-12-col pf-m-all-1-col-on-md pf-m-all-6-col-on-lg pf-m-all-4-col-on-xl pf-m-gutter"
          >
            <GridItem
              span={12}
            >
              <div
                className="pf-l-grid__item pf-m-12-col"
              >
                <Split
                  className="pf-u-align-items-center"
                  component="div"
                  hasGutter={true}
                >
                  <div
                    className="pf-l-split pf-m-gutter pf-u-align-items-center"
                  >
                    <SplitItem
                      isFilled={true}
                    >
                      <div
                        className="pf-l-split__item pf-m-fill"
                      >
                        <Title
                          className="kogito-management-console--details__title"
                          headingLevel="h2"
                          size="4xl"
                        >
                          <h2
                            className="pf-c-title pf-m-4xl kogito-management-console--details__title"
                          >
                            <ItemDescriptor
                              itemDescription={
                                Object {
                                  "description": null,
                                  "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
                                  "name": "travels",
                                }
                              }
                            >
                              <MockedComponent />
                            </ItemDescriptor>
                          </h2>
                        </Title>
                      </div>
                    </SplitItem>
                    <SplitItem>
                      <div
                        className="pf-l-split__item"
                      >
                        <OverflowMenu
                          breakpoint="lg"
                        >
                          <div
                            className="pf-c-overflow-menu"
                          >
                            <OverflowMenuContent
                              isPersistent={true}
                            >
                              <div
                                className="pf-c-overflow-menu__content"
                              >
                                <OverflowMenuGroup
                                  groupType="button"
                                  isPersistent={true}
                                >
                                  <div
                                    className="pf-c-overflow-menu__group pf-m-button-group"
                                  >
                                    <Button
                                      id="abort-button"
                                      onClick={[Function]}
                                      variant="secondary"
                                    >
                                      <button
                                        aria-disabled={false}
                                        aria-label={null}
                                        className="pf-c-button pf-m-secondary"
                                        data-ouia-component-id={30}
                                        data-ouia-component-type="PF4/Button"
                                        data-ouia-safe={true}
                                        disabled={false}
                                        id="abort-button"
                                        onClick={[Function]}
                                        type="button"
                                      >
                                        Abort
                                      </button>
                                    </Button>
                                  </div>
                                </OverflowMenuGroup>
                              </div>
                            </OverflowMenuContent>
                          </div>
                        </OverflowMenu>
                      </div>
                    </SplitItem>
                  </div>
                </Split>
              </div>
            </GridItem>
            <GridItem>
              <div
                className="pf-l-grid__item"
              >
                <MockedProcessDetails
                  data={
                    Object {
                      "ProcessInstances": Array [
                        Object {
                          "addons": Array [
                            "process-management",
                          ],
                          "businessKey": null,
                          "childProcessInstances": Array [],
                          "end": null,
                          "endpoint": "http://localhost:4000",
                          "error": Object {
                            "message": "Something went wrong",
                            "nodeDefinitionId": "a1e139d5-4e77-48c9-84ae-3459188e90433n",
                          },
                          "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
                          "lastUpdate": "2019-10-22T03:40:44.089Z",
                          "nodes": Array [
                            Object {
                              "definitionId": "StartEvent_1",
                              "enter": "2019-10-22T04:43:01.135Z",
                              "exit": "2019-10-22T04:43:01.135Z",
                              "id": "90e5a337-1c26-4fcc-8ee2-d20e6ba2a1a3",
                              "name": "StartProcess",
                              "nodeId": "9",
                              "type": "StartNode",
                            },
                          ],
                          "parentProcessInstance": null,
                          "parentProcessInstanceId": null,
                          "processId": "Travels",
                          "processName": "travels",
                          "roles": Array [],
                          "serviceUrl": "http://localhost:4000",
                          "start": "2019-10-22T03:40:44.089Z",
                          "state": "SUSPENDED",
                          "variables": "{\\"flight\\":{\\"arrival\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"departure\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"flightNumber\\":\\"MX555\\"},\\"hotel\\":{\\"address\\":{\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"street\\":\\"street\\",\\"zipCode\\":\\"12345\\"},\\"bookingNumber\\":\\"XX-012345\\",\\"name\\":\\"Perfect hotel\\",\\"phone\\":\\"09876543\\"},\\"trip\\":{\\"begin\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"end\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"visaRequired\\":false},\\"traveller\\":{\\"address\\":{\\"city\\":\\"Karkow\\",\\"country\\":\\"Poland\\",\\"street\\":\\"palna\\",\\"zipCode\\":\\"200300\\"},\\"email\\":\\"rob@redhat.com\\",\\"firstName\\":\\"Rob\\",\\"lastName\\":\\"Rob\\",\\"nationality\\":\\"Polish\\"}}",
                        },
                      ],
                    }
                  }
                  from={
                    Object {
                      "prev": "/ProcessInstances/8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
                    }
                  }
                />
              </div>
            </GridItem>
            <GridItem>
              <div
                className="pf-l-grid__item"
              >
                <MockedProcessDetailsProcessVariables
                  data={
                    Object {
                      "ProcessInstances": Array [
                        Object {
                          "addons": Array [
                            "process-management",
                          ],
                          "businessKey": null,
                          "childProcessInstances": Array [],
                          "end": null,
                          "endpoint": "http://localhost:4000",
                          "error": Object {
                            "message": "Something went wrong",
                            "nodeDefinitionId": "a1e139d5-4e77-48c9-84ae-3459188e90433n",
                          },
                          "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
                          "lastUpdate": "2019-10-22T03:40:44.089Z",
                          "nodes": Array [
                            Object {
                              "definitionId": "StartEvent_1",
                              "enter": "2019-10-22T04:43:01.135Z",
                              "exit": "2019-10-22T04:43:01.135Z",
                              "id": "90e5a337-1c26-4fcc-8ee2-d20e6ba2a1a3",
                              "name": "StartProcess",
                              "nodeId": "9",
                              "type": "StartNode",
                            },
                          ],
                          "parentProcessInstance": null,
                          "parentProcessInstanceId": null,
                          "processId": "Travels",
                          "processName": "travels",
                          "roles": Array [],
                          "serviceUrl": "http://localhost:4000",
                          "start": "2019-10-22T03:40:44.089Z",
                          "state": "SUSPENDED",
                          "variables": "{\\"flight\\":{\\"arrival\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"departure\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"flightNumber\\":\\"MX555\\"},\\"hotel\\":{\\"address\\":{\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"street\\":\\"street\\",\\"zipCode\\":\\"12345\\"},\\"bookingNumber\\":\\"XX-012345\\",\\"name\\":\\"Perfect hotel\\",\\"phone\\":\\"09876543\\"},\\"trip\\":{\\"begin\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"end\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"visaRequired\\":false},\\"traveller\\":{\\"address\\":{\\"city\\":\\"Karkow\\",\\"country\\":\\"Poland\\",\\"street\\":\\"palna\\",\\"zipCode\\":\\"200300\\"},\\"email\\":\\"rob@redhat.com\\",\\"firstName\\":\\"Rob\\",\\"lastName\\":\\"Rob\\",\\"nationality\\":\\"Polish\\"}}",
                        },
                      ],
                    }
                  }
                />
              </div>
            </GridItem>
            <GridItem>
              <div
                className="pf-l-grid__item"
              >
                <MockedProcessDetailsTimeline
                  data={
                    Object {
                      "addons": Array [
                        "process-management",
                      ],
                      "businessKey": null,
                      "childProcessInstances": Array [],
                      "end": null,
                      "endpoint": "http://localhost:4000",
                      "error": Object {
                        "message": "Something went wrong",
                        "nodeDefinitionId": "a1e139d5-4e77-48c9-84ae-3459188e90433n",
                      },
                      "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
                      "lastUpdate": "2019-10-22T03:40:44.089Z",
                      "nodes": Array [
                        Object {
                          "definitionId": "StartEvent_1",
                          "enter": "2019-10-22T04:43:01.135Z",
                          "exit": "2019-10-22T04:43:01.135Z",
                          "id": "90e5a337-1c26-4fcc-8ee2-d20e6ba2a1a3",
                          "name": "StartProcess",
                          "nodeId": "9",
                          "type": "StartNode",
                        },
                      ],
                      "parentProcessInstance": null,
                      "parentProcessInstanceId": null,
                      "processId": "Travels",
                      "processName": "travels",
                      "roles": Array [],
                      "serviceUrl": "http://localhost:4000",
                      "start": "2019-10-22T03:40:44.089Z",
                      "state": "SUSPENDED",
                      "variables": "{\\"flight\\":{\\"arrival\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"departure\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"flightNumber\\":\\"MX555\\"},\\"hotel\\":{\\"address\\":{\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"street\\":\\"street\\",\\"zipCode\\":\\"12345\\"},\\"bookingNumber\\":\\"XX-012345\\",\\"name\\":\\"Perfect hotel\\",\\"phone\\":\\"09876543\\"},\\"trip\\":{\\"begin\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"end\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"visaRequired\\":false},\\"traveller\\":{\\"address\\":{\\"city\\":\\"Karkow\\",\\"country\\":\\"Poland\\",\\"street\\":\\"palna\\",\\"zipCode\\":\\"200300\\"},\\"email\\":\\"rob@redhat.com\\",\\"firstName\\":\\"Rob\\",\\"lastName\\":\\"Rob\\",\\"nationality\\":\\"Polish\\"}}",
                    }
                  }
                />
              </div>
            </GridItem>
          </div>
        </Grid>
      </section>
    </PageSection>
  </div>
</ProcessDetailsPage>
`;
